--- a/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
+++ b/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
@@ -6,31 +6,31 @@
 			\hline
             (\%) & SI  & T-LDP & SI & T-LDP & SI & T-LDP& SI & T-LDP & SI & T-LDP \\
             \hline
-			discover-1 & \textbf{7} & 4 & \textbf{6} & 4 & \textbf{6} & 4 & \textbf{42} & 6 & \textbf{7} & 4 \\
+			discover-1 (D1) & \textbf{7} & 4 & \textbf{6} & 4 & \textbf{6} & 4 & \textbf{42} & 6 & \textbf{7} & 4 \\
             \hline
-            discover-2 & \textbf{35} & 34 & \textbf{11} & 8 & \textbf{11} & 9 & \textbf{91} & 86 & \textbf{42} & 40 \\
+            discover-2 (D2) & \textbf{35} & 34 & \textbf{11} & 8 & \textbf{11} & 9 & \textbf{91} & 86 & \textbf{42} & 40 \\
 			\hline
-            discover-3 & \textbf{37} & 36 & \textbf{47} & 45 & \textbf{55} & 53 & \textbf{62} & 61 & \textbf{60} & 59 \\
+            discover-3 (D3) & \textbf{37} & 36 & \textbf{47} & 45 & \textbf{55} & 53 & \textbf{62} & 61 & \textbf{60} & 59 \\
 			\hline
-            discover-4 & \textbf{13} & 5 & \textbf{19} & 13 & \textbf{19} & 15 & 3 & 3 & \textbf{20} & 9 \\
+            discover-4 (D4) & \textbf{13} & 5 & \textbf{19} & 13 & \textbf{19} & 15 & 3 & 3 & \textbf{20} & 9 \\
 			\hline
-            discover-5 & \textbf{8} & 7 & \textbf{11} & 8 & \textbf{11} & 9 & 2 & 2 & \textbf{13} & 12 \\
+            discover-5 (D5) & \textbf{8} & 7 & \textbf{11} & 8 & \textbf{11} & 9 & 2 & 2 & \textbf{13} & 12 \\
 			\hline
-            discover-6 & - & - & 7 & \textbf{8} & 7 & \textbf{9} & - & - & 41 & \textbf{42} \\
+            discover-6 (D6) & - & - & 7 & \textbf{8} & 7 & \textbf{9} & - & - & 41 & \textbf{42} \\
 			\hline
-            discover-7 & - & - & 10 & \textbf{12} & 11 & \textbf{13} & - & - & 2 & 2 \\
+            discover-7 (D7) & - & - & 10 & \textbf{12} & 11 & \textbf{13} & - & - & 2 & 2 \\
 			\hline
-            short-1 & \textbf{12} & 1 & \textbf{12} & 7 & \textbf{12} & 8 & \textbf{12} & 1 & \textbf{12} & 2 \\
+            short-1 (S1) & \textbf{12} & 1 & \textbf{12} & 7 & \textbf{12} & 8 & \textbf{12} & 1 & \textbf{12} & 2 \\
 			\hline
-            short-4 & 6 & \textbf{100} & 6 & \textbf{100} & 6 & \textbf{50} & 6 & \textbf{50} & 6 & \textbf{100} \\
+            short-4 (S4) & 6 & \textbf{100} & 6 & \textbf{100} & 6 & \textbf{50} & 6 & \textbf{50} & 6 & \textbf{100} \\
 			\hline
-            short-5 & \textbf{11} & 4 & \textbf{11} & 4 & \textbf{11} & 2 & \textbf{11} & 4 & \textbf{4} & 3 \\
+            short-5 (S5) & \textbf{11} & 4 & \textbf{11} & 4 & \textbf{11} & 2 & \textbf{11} & 4 & \textbf{4} & 3 \\
 			\hline
 		\end{tabular}
 	\end{center}
 	\caption{
         For almost all queries, the percentage of useful resources dereferenced is low. 
-        However, the Shape Index (SI) approach consistently matches or outperforms the Type Index with LDP method (T-LDP) except for query S4, where T-LDP can achieves a 100\% dereferencing ratio.
-        }
+		SI consistently matches or outperforms the Type Index with LDP (T-LDP), except for templates D6, D7, and S4, where D6 and D7 underperform by ~1\%, and S4 achieves 100\% with T-LDP compared to 6\% with SI.
+		}
 	\label{tab:ratioUsefulResources}
 \end{table}
