--- a/template_table_ratio_useful_resources.tex
+++ b/template_table_ratio_useful_resources.tex
@@ -30,7 +30,7 @@
 	\end{center}
 	\caption{
         For almost all queries, the percentage of useful resources dereferenced is low. 
-		SI consistently matches or outperforms the Type Index with LDP (T-LDP), except for templates D6, D7, and S4, where D6 and D7 underperform by $\sim$ 1\%, and S4 achieves 100\% with T-LDP compared to 6\% with SI.
+		SI consistently matches or outperforms the Type Index with LDP (T-LDP), except for templates D6, D7, and S4, where D6 and D7 underperform by approximately 1\%, and S4 achieves 100\% with T-LDP compared to 6\% with SI.
 		}
 	\label{tab:ratioUsefulResources}
 \end{table}
