--- a/template_table_ratio_useful_resources_summary.tex
+++ b/template_table_ratio_useful_resources_summary.tex
@@ -13,7 +13,7 @@
 	\end{center}
 	\caption{
         For most queries, the percentage of query-relevant resources is low (cell values are shown as $\text{avg}^{\text{max}}_{\text{min}}$). 
-		SI generally matches or outperforms the Type Index with LDP (T-LDP), except for templates D6, D7, and S4: D6 and D7 perform ~1\% worse, while S4 reaches 100\% with T-LDP versus only 6\% with SI.
+		shape index generally matches or outperforms the Type Index, except for templates D6, D7, and S4: D6 and D7 perform ~1\% worse, while S4 reaches 100\% with T-LDP versus only 6\% with the shape index.
 		}
 	\label{tab:ratioUsefulResources}
 \end{table}
