change the caption of the table

--- a/artefact/ratio_useful_resources/table_ratio_useful_resources_summary.tex
+++ b/artefact/ratio_useful_resources/table_ratio_useful_resources_summary.tex
@@ -14,7 +14,7 @@
 	\caption{
         For most queries, the percentage of query-relevant resources is low (cell values are shown as $\text{avg}^{\text{max}}_{\text{min}}$). 
 		shape index generally matches or outperforms the type index, except for templates D6, D7, and S4.
-		D6 and D7 perform ~1\% worse, while S4 reaches 100\% with type index versus only 6\% with the shape index.
+		The difference for S4 is more pronounced, reaching 100\% with the Type Index compared to only 6\% with the shape index.
 		}
 	\label{tab:ratioUsefulResources}
 \end{table}
