--- a/template_table_ratio_useful_resources_summary.tex
+++ b/template_table_ratio_useful_resources_summary.tex
@@ -13,7 +13,7 @@
 	\end{center}
 	\caption{
         For most queries, the percentage of query-relevant resources is low (cell values are shown as $\text{avg}^{\text{max}}_{\text{min}}$). 
-		shape index generally matches or outperforms the type index, except for templates D6, D7, and S4.
+		Shape index generally matches or outperforms the type index, except for templates D6, D7, and S4.
 		The difference for S4 is more pronounced, reaching 100\% with the Type Index compared to only 6\% with the shape index.
 		}
 	\label{tab:ratioUsefulResources}
