--- a/artefact/query_containment_execution_time/inner_dataset/table_query_shape_containment_exec.tex
+++ b/artefact/query_containment_execution_time/inner_dataset/table_query_shape_containment_exec.tex
@@ -2,37 +2,37 @@
 	\begin{center}
 		\begin{tabular}{|l|l|l|l|}
 			\hline
-			Query Template & Average (ms) & std (ms) & max (ms) \\
+			Query Template & avg (ms) & std (ms) & max (ms) \\
 			\hline
-			interactive-discover-1 & 0.026 & 0.041 & 0.160 \\
+			D1 & 0.026 & 0.041 & 0.160 \\
 			\hline
-			interactive-discover-2 & 0.036 & 0.059 & 0.558 \\
+			D2 & 0.036 & 0.059 & 0.558 \\
 			\hline
-			interactive-discover-3 & 0.021 & 0.024 & 0.057 \\
+			D3 & 0.021 & 0.024 & 0.057 \\
 			\hline
-			interactive-discover-4 & 0.048 & 0.034 & 0.158 \\
+			D4 & 0.048 & 0.034 & 0.158 \\
 			\hline
-			interactive-discover-5 & 0.043 & 0.129 & 1.229 \\
+			D5 & 0.043 & 0.129 & 1.229 \\
 			\hline
-			interactive-discover-6 & 0.021 & 0.022 & 0.048 \\
+			D6 & 0.021 & 0.022 & 0.048 \\
 			\hline
-			interactive-discover-7 & 0.021 & 0.020 & 0.052 \\
+			D7 & 0.021 & 0.020 & 0.052 \\
 			\hline
-			interactive-discover-8 & 0.029 & 0.057 & 0.563 \\
+			D8 & 0.029 & 0.057 & 0.563 \\
 			\hline
-			interactive-short-1 & 0.057 & 0.044 & 0.157 \\
+			S1 & 0.057 & 0.044 & 0.157 \\
 			\hline
-			interactive-short-2 & 0.154 & 0.189 & 1.816 \\
+			S2 & 0.154 & 0.189 & 1.816 \\
 			\hline
-			interactive-short-3 & 0.094 & 0.058 & 0.239 \\
+			S3 & 0.094 & 0.058 & 0.239 \\
 			\hline
-			interactive-short-4 & 0.022 & 0.017 & 0.032 \\
+			S4 & 0.022 & 0.017 & 0.032 \\
 			\hline
-			interactive-short-5 & 0.053 & 0.046 & 0.332 \\
+			S5 & 0.053 & 0.046 & 0.332 \\
 			\hline
-			interactive-short-6 & 0.079 & 0.069 & 0.287 \\
+			S6 & 0.079 & 0.069 & 0.287 \\
 			\hline
-			interactive-short-7 & 0.155 & 0.170 & 1.520 \\
+			S7 & 0.155 & 0.170 & 1.520 \\
 			\hline
 		\end{tabular}
 	\end{center}
