--- a/templates/table_continuous_performance.tex
+++ b/templates/table_continuous_performance.tex
@@ -4,14 +4,14 @@
     \resizebox{\textwidth}{!}{
     \begin{tabular}{|c|c|c|c||c|c|c||c|c|c|}
         \hline
-        \textbf{Query} 
+        \textbf{Template} 
         & \multicolumn{3}{|c||}{\textbf{Shape Index}} 
         & \multicolumn{3}{c||}{\textbf{Type Index}} 
         & \multicolumn{3}{c|}{\textbf{LDP}} \\
         \hline
-        & \textbf{FT} & \textbf{TT} & \textbf{WT} 
-        & \textbf{FT} & \textbf{TT} & \textbf{WT} 
-        & \textbf{FT} & \textbf{TT} & \textbf{WT} \\
+        & \textbf{FT (s)} & \textbf{TT (s)} & \textbf{WT (s)} 
+        & \textbf{FT (s)} & \textbf{TT (s)} & \textbf{WT (s)} 
+        & \textbf{FT (s)} & \textbf{TT (s)} & \textbf{WT (s)} \\
         \hline
         D1 & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
         \hline
@@ -37,5 +37,5 @@
         \hline
     \end{tabular}
     }
-    \end{table}
+\end{table}
     
