--- a/artefact/query_containment_execution_time/fully_bounded/table_query_shape_containment_exec.tex
+++ b/artefact/query_containment_execution_time/fully_bounded/table_query_shape_containment_exec.tex
@@ -2,37 +2,37 @@
 	\begin{center}
 		\begin{tabular}{|l|l|l|l|}
 			\hline
-			Query Template & Average (ms) & std (ms) & max (ms) \\
+			Query Template & avg (ms) & std (ms) & max (ms) \\
 			\hline
-			interactive-discover-1 & 0.062 & 0.073 & 0.539 \\
+			D1 & 0.062 & 0.073 & 0.539 \\
 			\hline
-			interactive-discover-2 & 0.106 & 0.461 & 4.655 \\
+			D2 & 0.106 & 0.461 & 4.655 \\
 			\hline
-			interactive-discover-3 & 0.040 & 0.034 & 0.133 \\
+			D3 & 0.040 & 0.034 & 0.133 \\
 			\hline
-			interactive-discover-4 & 0.043 & 0.068 & 0.672 \\
+			D4 & 0.043 & 0.068 & 0.672 \\
 			\hline
-			interactive-discover-5 & 0.015 & 0.015 & 0.025 \\
+			D5 & 0.015 & 0.015 & 0.025 \\
 			\hline
-			interactive-discover-6 & 0.068 & 0.039 & 0.174 \\
+			D6 & 0.068 & 0.039 & 0.174 \\
 			\hline
-			interactive-discover-7 & 0.041 & 0.101 & 1.005 \\
+			D7 & 0.041 & 0.101 & 1.005 \\
 			\hline
-			interactive-discover-8 & 0.033 & 0.045 & 0.426 \\
+			D8 & 0.033 & 0.045 & 0.426 \\
 			\hline
-			interactive-short-1 & 0.074 & 0.064 & 0.560 \\
+			S1 & 0.074 & 0.064 & 0.560 \\
 			\hline
-			interactive-short-2 & 0.309 & 0.327 & 2.791 \\
+			S2 & 0.309 & 0.327 & 2.791 \\
 			\hline
-			interactive-short-3 & 0.072 & 0.069 & 0.650 \\
+			S3 & 0.072 & 0.069 & 0.650 \\
 			\hline
-			interactive-short-4 & 0.042 & 0.032 & 0.144 \\
+			S4 & 0.042 & 0.032 & 0.144 \\
 			\hline
-			interactive-short-5 & 0.043 & 0.057 & 0.551 \\
+			S5 & 0.043 & 0.057 & 0.551 \\
 			\hline
-			interactive-short-6 & 0.132 & 0.343 & 3.473 \\
+			S6 & 0.132 & 0.343 & 3.473 \\
 			\hline
-			interactive-short-7 & 0.176 & 0.158 & 0.971 \\
+			S7 & 0.176 & 0.158 & 0.971 \\
 			\hline
 		\end{tabular}
 	\end{center}
