--- a/artefact/query_containment_execution_time/minimal/table_query_shape_containment_exec.tex
+++ b/artefact/query_containment_execution_time/minimal/table_query_shape_containment_exec.tex
@@ -2,37 +2,37 @@
 	\begin{center}
 		\begin{tabular}{|l|l|l|l|}
 			\hline
-			Query Template & Average (ms) & std (ms) & max (ms) \\
+			Query Template & avg (ms) & std (ms) & max (ms) \\
 			\hline
-			interactive-discover-1 & 0.037 & 0.029 & 0.072 \\
+			D1 & 0.037 & 0.029 & 0.072 \\
 			\hline
-			interactive-discover-2 & 0.049 & 0.054 & 0.235 \\
+			D2 & 0.049 & 0.054 & 0.235 \\
 			\hline
-			interactive-discover-3 & 0.031 & 0.067 & 0.652 \\
+			D3 & 0.031 & 0.067 & 0.652 \\
 			\hline
-			interactive-discover-4 & 0.027 & 0.020 & 0.040 \\
+			D4 & 0.027 & 0.020 & 0.040 \\
 			\hline
-			interactive-discover-5 & 0.014 & 0.015 & 0.022 \\
+			D5 & 0.014 & 0.015 & 0.022 \\
 			\hline
-			interactive-discover-6 & 0.038 & 0.026 & 0.084 \\
+			D6 & 0.038 & 0.026 & 0.084 \\
 			\hline
-			interactive-discover-7 & 0.041 & 0.078 & 0.690 \\
+			D7 & 0.041 & 0.078 & 0.690 \\
 			\hline
-			interactive-discover-8 & 0.029 & 0.026 & 0.177 \\
+			D8 & 0.029 & 0.026 & 0.177 \\
 			\hline
-			interactive-short-1 & 0.071 & 0.043 & 0.241 \\
+			S1 & 0.071 & 0.043 & 0.241 \\
 			\hline
-			interactive-short-2 & 0.107 & 0.085 & 0.738 \\
+			S2 & 0.107 & 0.085 & 0.738 \\
 			\hline
-			interactive-short-3 & 0.057 & 0.078 & 0.756 \\
+			S3 & 0.057 & 0.078 & 0.756 \\
 			\hline
-			interactive-short-4 & 0.041 & 0.076 & 0.741 \\
+			S4 & 0.041 & 0.076 & 0.741 \\
 			\hline
-			interactive-short-5 & 0.035 & 0.027 & 0.067 \\
+			S5 & 0.035 & 0.027 & 0.067 \\
 			\hline
-			interactive-short-6 & 0.062 & 0.055 & 0.490 \\
+			S6 & 0.062 & 0.055 & 0.490 \\
 			\hline
-			interactive-short-7 & 0.120 & 0.093 & 0.692 \\
+			S7 & 0.120 & 0.093 & 0.692 \\
 			\hline
 		\end{tabular}
 	\end{center}
