artefact up to date

--- a/artefact/continuous_performance/table_continuous_performance.tex
+++ b/artefact/continuous_performance/table_continuous_performance.tex
@@ -4,7 +4,7 @@
     \resizebox{\textwidth}{!}{
     \begin{tabular}{|c|c|c|c||c|c|c||c|c|c|}
         \hline
-        \textbf{Query} 
+        \textbf{Template} 
         & \multicolumn{3}{|c||}{\textbf{Shape Index}} 
         & \multicolumn{3}{c||}{\textbf{Type Index}} 
         & \multicolumn{3}{c|}{\textbf{LDP}} \\
