html artefact and better fix table for dief

--- a/templates/dief_table_continuous_performance.tex
+++ b/templates/dief_table_continuous_performance.tex
@@ -9,9 +9,9 @@
         & \multicolumn{3}{c||}{\textbf{Type Index}} 
         & \multicolumn{3}{c|}{\textbf{LDP}} \\
         \hline
-        & \textbf{Dief@0.1s ($n \times s$)} & \textbf{Dief@1s ($n \times s$)} & \textbf{Dief@10s ($n \times s$)} 
-        & \textbf{Dief@0.1s ($n \times s$)} & \textbf{Dief@1s ($n \times s$)} & \textbf{Dief@10s ($n \times s$)} 
-        & \textbf{Dief@0.1s ($n \times s$)} & \textbf{Dief@1s ($n \times s$)} & \textbf{Dief@10s ($n \times s$)} \\
+        & \textbf{Dief@100ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} 
+        & \textbf{Dief@100ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} 
+        & \textbf{Dief@100ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} \\
         \hline
         D1 & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
         \hline
