--- a/artefact/continuous_performance/dief_table_continuous_performance.tex
+++ b/artefact/continuous_performance/dief_table_continuous_performance.tex
@@ -4,34 +4,34 @@
     \resizebox{\textwidth}{!}{
     \begin{tabular}{|c|c|c|c||c|c|c||c|c|c|}
         \hline
-        \textbf{Query} 
+        \textbf{Template} 
         & \multicolumn{3}{|c||}{\textbf{Shape Index}} 
         & \multicolumn{3}{c||}{\textbf{Type Index}} 
         & \multicolumn{3}{c|}{\textbf{LDP}} \\
         \hline
-        & \textbf{Dief@0.1s ($n \times s$)} & \textbf{Dief@1s ($n \times s$)} & \textbf{Dief@10s ($n \times s$)} 
-        & \textbf{Dief@0.1s ($n \times s$)} & \textbf{Dief@1s ($n \times s$)} & \textbf{Dief@10s ($n \times s$)} 
-        & \textbf{Dief@0.1s ($n \times s$)} & \textbf{Dief@1s ($n \times s$)} & \textbf{Dief@10s ($n \times s$)} \\
+        & \textbf{Dief@100ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} 
+        & \textbf{Dief@100ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} 
+        & \textbf{Dief@100ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} & \textbf{Dief@1000ms ($n \times ms$)} \\
         \hline
-        D1 & $0.00$ & $\boldsymbol{0.23}$ & $3.43$ & $0.00$ & $0.01$ & $3.43$ & $0.00$ & $0.01$ & $\boldsymbol{3.53}$ \\
+        D1 & $0.00$ & $\boldsymbol{1.70}$ & $\boldsymbol{55.64}$ & $0.00$ & $0.22$ & $49.90$ & $0.00$ & $0.21$ & $49.26$ \\
         \hline
-        D2 & $0.00$ & $0.16$ & $39.55$ & $0.00$ & $\boldsymbol{0.22}$ & $41.38$ & $0.00$ & $0.22$ & $\boldsymbol{42.36}$ \\
+        D2 & $0.00$ & $\boldsymbol{1.91}$ & $485.48$ & $0.00$ & $0.31$ & $485.69$ & $0.00$ & $0.23$ & $\boldsymbol{490.77}$ \\
         \hline
-        D3 & $0.00$ & $0.00$ & $\boldsymbol{0.49}$ & $0.00$ & $0.00$ & $0.46$ & $0.00$ & $0.00$ & $0.47$ \\
+        D3 & $0.00$ & $0.00$ & $590.13$ & $0.00$ & $0.00$ & $\boldsymbol{623.68}$ & $0.00$ & $0.00$ & $611.36$ \\
         \hline
-        D4 & $0.00$ & $0.00$ & $0.01$ & $0.00$ & $0.00$ & $0.02$ & $0.00$ & $0.00$ & $\boldsymbol{0.02}$ \\
+        D4 & $0.00$ & $\boldsymbol{0.36}$ & $\boldsymbol{34.93}$ & $0.00$ & $0.06$ & $26.61$ & $0.00$ & $0.07$ & $26.44$ \\
         \hline
-        D5 & $0.00$ & $\boldsymbol{0.34}$ & $\boldsymbol{6.18}$ & $0.00$ & $0.19$ & $5.19$ & $0.00$ & $0.18$ & $5.03$ \\
+        D5 & $0.00$ & $\boldsymbol{1.03}$ & $\boldsymbol{73.26}$ & $0.00$ & $0.74$ & $71.61$ & $0.00$ & $0.74$ & $71.60$ \\
         \hline
-        D6 & $0.00$ & $0.00$ & $\boldsymbol{15.94}$ & $0.00$ & $0.00$ & $14.60$ & $0.00$ & $0.00$ & $14.05$ \\
+        D6 & $0.00$ & $\boldsymbol{0.08}$ & $53.57$ & $0.00$ & $0.08$ & $\boldsymbol{57.85}$ & $0.00$ & $0.08$ & $56.68$ \\
         \hline
-        D7 & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ \\
+        D7 & $0.00$ & $\boldsymbol{0.08}$ & $\boldsymbol{8.52}$ & $0.00$ & $0.07$ & $8.44$ & $0.00$ & $0.07$ & $8.45$ \\
         \hline
-        S1 & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ \\
+        S1 & $0.00$ & $\boldsymbol{0.68}$ & $\boldsymbol{9.68}$ & $0.00$ & $0.18$ & $8.70$ & $0.00$ & $0.18$ & $8.69$ \\
         \hline
-        S4 & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ \\
+        S4 & $0.00$ & $0.49$ & $9.49$ & $0.01$ & $\boldsymbol{0.66}$ & $\boldsymbol{9.66}$ & $0.01$ & $0.66$ & $9.66$ \\
         \hline
-        S5 & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ & $0.00$ \\
+        S5 & $0.00$ & $0.25$ & $9.09$ & $0.00$ & $0.34$ & $9.22$ & $0.00$ & $\boldsymbol{0.37}$ & $\boldsymbol{9.25}$ \\
         \hline
         S7 & $\boldsymbol{0.00}$ & $\boldsymbol{0.00}$ & $\boldsymbol{0.00}$ & - & - & - & - & - & - \\
         \hline
