--- a/templates/table_continuous_performance.tex
+++ b/templates/table_continuous_performance.tex
@@ -1,7 +1,7 @@
-\renewcommand{\arraystretch}{1.1}
+\renewcommand{\array$s$tretch}{1.1}
 \begin{table}[h]
     \centering
-    \resizebox{\textwidth}{!}{
+    \re$s$izebox{\textwidth}{!}{
     \begin{tabular}{|c|c|c|c||c|c|c||c|c|c|}
         \hline
         \textbf{Template} 
@@ -9,9 +9,9 @@
         & \multicolumn{3}{c||}{\textbf{Type Index}} 
         & \multicolumn{3}{c|}{\textbf{LDP}} \\
         \hline
-        & \textbf{FT (s)} & \textbf{TT (s)} & \textbf{WT (s)} 
-        & \textbf{FT (s)} & \textbf{TT (s)} & \textbf{WT (s)} 
-        & \textbf{FT (s)} & \textbf{TT (s)} & \textbf{WT (s)} \\
+        & \textbf{FT ($s$)} & \textbf{TT ($s$)} & \textbf{WT ($s$)} 
+        & \textbf{FT ($s$)} & \textbf{TT ($s$)} & \textbf{WT ($s$)} 
+        & \textbf{FT ($s$)} & \textbf{TT ($s$)} & \textbf{WT ($s$)} \\
         \hline
         D1 & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
         \hline
@@ -37,5 +37,9 @@
         \hline
     \end{tabular}
     }
+    \caption{Continuous performance metrics showing First Result Arrival Time (FT), Termination Time (TT), and Waiting Time (WT). FT refers to the time taken for the first result to be delivered.
+     TT captures the delay between the last result and the termination of the query engine.
+    WT represents the total time the user waited more than one second between consecutive results, indicating interruptions in the seamless flow experience.}
+	\label{tab:continuousPerf}
 \end{table}
     
