--- a/artefact/continuous_performance/table_continuous_performance.tex
+++ b/artefact/continuous_performance/table_continuous_performance.tex
@@ -1,7 +1,7 @@
-\renewcommand{\arraystretch}{1.1}
+\renewcommand{\array$s$tretch}{1.1}
 \begin{table}[h]
     \centering
-    \resizebox{\textwidth}{!}{
+    \re$s$izebox{\textwidth}{!}{
     \begin{tabular}{|c|c|c|c||c|c|c||c|c|c|}
         \hline
         \textbf{Template} 
@@ -9,17 +9,17 @@
         & \multicolumn{3}{c||}{\textbf{Type Index}} 
         & \multicolumn{3}{c|}{\textbf{LDP}} \\
         \hline
-        & \textbf{FT (s)} & \textbf{TT (s)} & \textbf{WT (s)} 
-        & \textbf{FT (s)} & \textbf{TT (s)} & \textbf{WT (s)} 
-        & \textbf{FT (s)} & \textbf{TT (s)} & \textbf{WT (s)} \\
+        & \textbf{FT ($s$)} & \textbf{TT ($s$)} & \textbf{WT ($s$)} 
+        & \textbf{FT ($s$)} & \textbf{TT ($s$)} & \textbf{WT ($s$)} 
+        & \textbf{FT ($s$)} & \textbf{TT ($s$)} & \textbf{WT ($s$)} \\
         \hline
         D1 & $\boldsymbol{0.66}$ & $\boldsymbol{0.11}$ & $0.23$ & $1.51$ & $1.09$ & $\boldsymbol{0.21}$ & $1.55$ & $1.02$ & $0.21$ \\
         \hline
-        D2 & $\boldsymbol{1.25}$ & $0.00$ & $0.78$ & $1.91$ & $0.00$ & $0.39$ & $1.88$ & $0.00$ & $\boldsymbol{0.38}$ \\
+        D2 & $\boldsymbol{1.25}$ & $0.00$ & $0.78$ & $1.91$ & $\boldsymbol{0.00}$ & $0.39$ & $1.88$ & $0.00$ & $\boldsymbol{0.38}$ \\
         \hline
-        D3 & $3.74$ & $0.00$ & $0.00$ & $\boldsymbol{3.67}$ & $0.00$ & $0.00$ & $3.77$ & $0.00$ & $0.00$ \\
+        D3 & $3.74$ & $\boldsymbol{0.00}$ & $0.00$ & $\boldsymbol{3.67}$ & $0.00$ & $0.00$ & $3.77$ & $0.00$ & $0.00$ \\
         \hline
-        D4 & $\boldsymbol{1.74}$ & $0.00$ & $0.00$ & $3.14$ & $0.00$ & $0.00$ & $3.17$ & $0.00$ & $0.00$ \\
+        D4 & $\boldsymbol{1.74}$ & $0.00$ & $0.00$ & $3.14$ & $0.00$ & $0.00$ & $3.17$ & $\boldsymbol{0.00}$ & $0.00$ \\
         \hline
         D5 & $\boldsymbol{0.49}$ & $\boldsymbol{0.03}$ & $0.22$ & $1.17$ & $0.04$ & $0.01$ & $1.18$ & $0.04$ & $\boldsymbol{0.00}$ \\
         \hline
@@ -29,7 +29,7 @@
         \hline
         S1 & $\boldsymbol{0.32}$ & $\boldsymbol{0.00}$ & $0.00$ & $1.30$ & $0.09$ & $0.00$ & $1.31$ & $0.09$ & $0.00$ \\
         \hline
-        S4 & $0.51$ & $0.01$ & $0.00$ & $\boldsymbol{0.34}$ & $0.01$ & $0.00$ & $0.34$ & $0.01$ & $0.00$ \\
+        S4 & $0.51$ & $\boldsymbol{0.01}$ & $0.00$ & $\boldsymbol{0.34}$ & $0.01$ & $0.00$ & $0.34$ & $0.01$ & $0.00$ \\
         \hline
         S5 & $0.91$ & $\boldsymbol{0.00}$ & $0.00$ & $0.78$ & $0.68$ & $0.00$ & $\boldsymbol{0.75}$ & $0.76$ & $0.00$ \\
         \hline
@@ -37,5 +37,9 @@
         \hline
     \end{tabular}
     }
+    \caption{Continuous performance metrics showing First Result Arrival Time (FT), Termination Time (TT), and Waiting Time (WT). FT refers to the time taken for the first result to be delivered.
+     TT captures the delay between the last result and the termination of the query engine.
+    WT represents the total time the user waited more than one second between consecutive results, indicating interruptions in the seamless flow experience.}
+	\label{tab:continuousPerf}
 \end{table}
     
