--- a/templates/table_continuous_performance.tex
+++ b/templates/table_continuous_performance.tex
@@ -1,4 +1,4 @@
-\renewcommand{\array$s$tretch}{1.1}
+\renewcommand{\arraystretch}{1.1}
 \begin{table}[h]
     \centering
     \re$s$izebox{\textwidth}{!}{
