--- a/artefact/continuous_performance/table_continuous_performance.tex
+++ b/artefact/continuous_performance/table_continuous_performance.tex
@@ -1,7 +1,7 @@
 \renewcommand{\arraystretch}{1.1}
 \begin{table}[h]
     \centering
-    \re$s$izebox{\textwidth}{!}{
+    \resizebox{\textwidth}{!}{
     \begin{tabular}{|c|c|c|c||c|c|c||c|c|c|}
         \hline
         \textbf{Template} 
