--- a/artefact/continuous_performance/dief_table_continuous_performance.tex
+++ b/artefact/continuous_performance/dief_table_continuous_performance.tex
@@ -9,36 +9,38 @@
         & \multicolumn{3}{c||}{\textbf{Type Index}} 
         & \multicolumn{3}{c|}{\textbf{LDP}} \\
         \hline
-        & \textbf{IT ($n \times ms$)} & \textbf{SFT ($n \times ms$)} & \textbf{ADT ($n \times ms$)} 
-        & \textbf{IT ($n \times ms$)} & \textbf{SFT ($n \times ms$)} & \textbf{ADT ($n \times ms$)} 
-        & \textbf{IT ($n \times ms$)} & \textbf{SFT ($n \times ms$)} & \textbf{ADT ($n \times ms$)} \\
+        & \textbf{IT ($n \times ms$)} & \textbf{SFT ($n \times ms$)} & \textbf{LRT ($n \times ms$)} 
+        & \textbf{IT ($n \times ms$)} & \textbf{SFT ($n \times ms$)} & \textbf{LRT ($n \times ms$)} 
+        & \textbf{IT ($n \times ms$)} & \textbf{SFT ($n \times ms$)} & \textbf{LRT ($n \times ms$)} \\
         \hline
-        D1 & $0.00$ & $\boldsymbol{1.70}$ & $\boldsymbol{55.64}$ & $0.00$ & $0.22$ & $49.90$ & $0.00$ & $0.21$ & $49.26$ \\
+        D1 & $0.00$ & $\boldsymbol{1.70}$ & $\boldsymbol{16.96}$ & $0.00$ & $0.22$ & $11.22$ & $0.00$ & $0.21$ & $10.67$ \\
         \hline
-        D2 & $0.00$ & $\boldsymbol{1.91}$ & $485.48$ & $0.00$ & $0.31$ & $485.69$ & $0.00$ & $0.23$ & $\boldsymbol{490.77}$ \\
+        D2 & $0.00$ & $\boldsymbol{1.91}$ & $119.54$ & $0.00$ & $0.31$ & $119.75$ & $0.00$ & $0.23$ & $\boldsymbol{124.94}$ \\
         \hline
-        D3 & $0.00$ & $0.00$ & $590.13$ & $0.00$ & $0.00$ & $\boldsymbol{623.68}$ & $0.00$ & $0.00$ & $611.36$ \\
+        D3 & $0.00$ & $0.00$ & $85.14$ & $0.00$ & $0.00$ & $\boldsymbol{97.01}$ & $0.00$ & $0.00$ & $85.78$ \\
         \hline
-        D4 & $0.00$ & $\boldsymbol{0.36}$ & $\boldsymbol{34.93}$ & $0.00$ & $0.06$ & $26.61$ & $0.00$ & $0.07$ & $26.44$ \\
+        D4 & $0.00$ & $\boldsymbol{0.36}$ & $\boldsymbol{10.25}$ & $0.00$ & $0.06$ & $1.92$ & $0.00$ & $0.07$ & $1.75$ \\
         \hline
-        D5 & $0.00$ & $\boldsymbol{1.03}$ & $\boldsymbol{73.26}$ & $0.00$ & $0.74$ & $71.61$ & $0.00$ & $0.74$ & $71.60$ \\
+        D5 & $0.00$ & $\boldsymbol{1.03}$ & $\boldsymbol{13.82}$ & $0.00$ & $0.74$ & $12.18$ & $0.00$ & $0.74$ & $12.16$ \\
         \hline
-        D6 & $0.00$ & $\boldsymbol{0.08}$ & $53.57$ & $0.00$ & $0.08$ & $\boldsymbol{57.85}$ & $0.00$ & $0.08$ & $56.68$ \\
+        D6 & $0.00$ & $\boldsymbol{0.08}$ & $16.08$ & $0.00$ & $0.08$ & $\boldsymbol{20.04}$ & $0.00$ & $0.08$ & $18.88$ \\
         \hline
-        D7 & $0.00$ & $\boldsymbol{0.08}$ & $\boldsymbol{8.52}$ & $0.00$ & $0.07$ & $8.44$ & $0.00$ & $0.07$ & $8.45$ \\
+        D7 & $0.00$ & $\boldsymbol{0.08}$ & $\boldsymbol{0.28}$ & $0.00$ & $0.07$ & $0.20$ & $0.00$ & $0.07$ & $0.21$ \\
         \hline
-        S1 & $0.00$ & $\boldsymbol{0.68}$ & $\boldsymbol{9.68}$ & $0.00$ & $0.18$ & $8.70$ & $0.00$ & $0.18$ & $8.69$ \\
+        S1 & $0.00$ & $\boldsymbol{0.68}$ & $\boldsymbol{1.25}$ & $0.00$ & $0.18$ & $0.28$ & $0.00$ & $0.18$ & $0.27$ \\
         \hline
-        S4 & $0.00$ & $0.49$ & $9.49$ & $\boldsymbol{0.01}$ & $\boldsymbol{0.66}$ & $\boldsymbol{9.66}$ & $0.01$ & $0.66$ & $9.66$ \\
+        S4 & $0.00$ & $0.49$ & $0.00$ & $\boldsymbol{0.01}$ & $\boldsymbol{0.66}$ & $\boldsymbol{0.04}$ & $0.01$ & $0.66$ & $0.04$ \\
         \hline
-        S5 & $0.00$ & $0.25$ & $9.09$ & $0.00$ & $0.34$ & $9.22$ & $0.00$ & $\boldsymbol{0.37}$ & $\boldsymbol{9.25}$ \\
+        S5 & $0.00$ & $0.25$ & $0.05$ & $0.00$ & $0.34$ & $0.10$ & $0.00$ & $\boldsymbol{0.37}$ & $\boldsymbol{0.13}$ \\
         \hline
         S7 & $\boldsymbol{0.00}$ & $\boldsymbol{0.00}$ & $\boldsymbol{0.00}$ & - & - & - & - & - & - \\
         \hline
     \end{tabular}
     }
-    \caption{Table showing the average diefficiency metric for different approaches across query templates, measured at three time thresholds: instantaneous time (IT, 0.1s), seamless flow time (SFT, 1s), and attention drift time (ADT, 10s).
-    The diefficiency is expressed as the number of results (n) per millisecond (ms). For most queries, diefficiency at IT is 0, as no results are produced quickly enough. At SFT, the shape index approach generally yields better performance, while at ADT, results tend to converge across approaches.}
+    \caption{Table showing the average diefficiency metric for different approaches across query templates, measured at three time thresholds: instantaneous time (IT, 0.1s), seamless flow time (SFT, 1s), and at the time of the last result (LRT).
+    The diefficiency is expressed as the number of results (n) per millisecond (ms).
+    For most queries, diefficiency at IT is 0, as no results are produced quickly enough.
+    At SFT, the shape index approach generally yields better performance, while at LRT, results tend to converge across approaches.}
 	\label{tab:dief}
 \end{table}
     
