--- a/artefact/statistical_significance/comparaisonStateOfTheArt.tex
+++ b/artefact/statistical_significance/comparaisonStateOfTheArt.tex
@@ -26,6 +26,11 @@
 			\hline
 		\end{tabular}
 	\end{center}
-	\caption{Table comparing the shape index approach to the state-of-the-art. RH, indicate that the p-value is associated to the rejected hypothesis. Every query performs better or similarly to the state-of-the-art with the shape index approach except for interactive-short-4.}
+	\caption{Table comparing the shape index approach to the state-of-the-art. RH, indicate that the p-value is associated to the rejected hypothesis. Every query performs better or similarly to the state-of-the-art with the shape index approach except for interactive-short-4. One might expect the average ratio of HTTP requests for D6 and D7 to be one. 
+In our implementation, however, the query subsumption algorithm naively retrieved nested shapes, 
+leading to some shapes being dereferenced multiple times. 
+This is an implementation artifact rather than an inherent property of the method. 
+Even in this worst case, the impact on the number of HTTP requests is small and does not affect the overall conclusions, 
+especially given that requests are sent in parallel.}
 	\label{tab:statSignificanceStateOfTheArt}
 \end{table}
