--- a/templates/table_ratio_useful_resources_summary.tex
+++ b/templates/table_ratio_useful_resources_summary.tex
@@ -1,7 +1,7 @@
-\renewcommand{\arraystretch}{1.1}
+\renewcommand{\arraystretch}{1.2}
 \begin{table}[htbp]
 	\begin{center}
-		\resizebox{\textwidth}{!}{\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
+		\resizebox{\linewidth}{!}{\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
 			\hline
             Approach/ Query Template & D1 & D2 & D3 & D4 & D5 & D6 & D7 & S1 & S4 & S5 \\
 			\hline
