made a table strech

--- a/artefact/ratio_useful_resources/table_ratio_useful_resources_summary.tex
+++ b/artefact/ratio_useful_resources/table_ratio_useful_resources_summary.tex
@@ -1,5 +1,5 @@
 \renewcommand{\arraystretch}{1.2}
-\begin{table}[htbp]
+\begin{table*}
 	\begin{center}
 		\resizebox{\linewidth}{!}{\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
 			\hline
@@ -17,4 +17,4 @@
 		The difference for S4 is more pronounced, reaching 100\% with the Type Index compared to only 6\% with the shape index.
 		}
 	\label{tab:ratioUsefulResources}
-\end{table}
+\end{table*}
